[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-condition-launcher"
version = "0.1.0"
description = "A GUI launcher for games with conditions"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # tkinter is built-in
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
